# cs393r_starter

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  parameter_sweep_bag_player.py  parameter_sweep_particle_filter_player.py  parameter_sweep_sweeper.py  tmux_session.sh
auxillary_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
auxillary_ws/devel/include/amrl_msgs/: Localization2DMsg.h  Pose2Df.h
auxillary_ws/devel/share/amrl_maps/cmake/: amrl_mapsConfig.cmake
auxillary_ws/devel/share/amrl_msgs/cmake/: amrl_msgs-msg-extras.cmake  amrl_msgs-msg-paths.cmake  amrl_msgsConfig.cmake
auxillary_ws/devel/share/common-lisp/ros/amrl_msgs/msg/: Localization2DMsg.lisp  Pose2Df.lisp  _package.lisp  amrl_msgs-msg.asd
auxillary_ws/devel/share/gennodejs/ros/amrl_msgs/msg/: Localization2DMsg.js  Pose2Df.js  _index.js
auxillary_ws/devel/share/parameter_sweep/cmake/: parameter_sweepConfig.cmake
auxillary_ws/devel/share/roseus/ros/amrl_msgs/: manifest.l
auxillary_ws/devel/share/roseus/ros/amrl_msgs/msg/: Localization2DMsg.l  Pose2Df.l
auxillary_ws/src/amrl_maps/: CMakeLists.txt  package.xml
auxillary_ws/src/amrl_maps/GDC1/: GDC1.vectormap.json
auxillary_ws/src/amrl_msgs/: CMakeLists.txt  package.xml
auxillary_ws/src/parameter_sweep/: CMakeLists.txt  package.xml
auxillary_ws/src/parameter_sweep/src/: bag_player.py  particle_filter_player.py  sweeper.py
src/navigation/: .navigation.cc.swp  car.h  controller.cc  controller.h  controllers.cpp  controllers.cpp.save  controllers.h  functions.cc  functions.cpp  functions.h  global_planner.cc  global_planner.h  local_planner.cpp  local_planner.h  navigation.cc  navigation.h  navigation_main.cc  parameters.h  path_generation.cpp  path_generation.h  path_options.cc  path_options.h  vehicles.hpp
src/particle_filter/: particle_filter.cc  particle_filter.h  particle_filter_main.cc  resampling_test.cpp
src/slam/: gtsam_test.cpp  icp.cpp  icp.h  icp2.hpp  icp_test.cpp  motion_model.hpp  motion_model_test.cpp  parameters.h  rasterization.cpp  rasterization.hpp  rasterization_test.cpp  slam.cc  slam.h  slam_main.cc  slam_processor.cpp  slam_processor.h  slam_processor_test.cpp
src/visualization/: visualization.cc  visualization.h
test_data/gtsam_poses_and_scans/: scan3.txt  scan5.txt  scan_poses.txt
test_files/: scan1.txt  scan2.txt  scan4.txt
